--- a/app/src/main/res/layout/item_product_in_deposit_detail.xml
+++ b/app/src/main/res/layout/item_product_in_deposit_detail.xml
@@ -1,92 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="#344955">
 
-    <data>
-
-        <variable
-            name="depositWithProduct"
-            type="com.example.konsinyasiapp.entities.DepositWithProduct" />
-    </data>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#344955">
+        android:layout_margin="@dimen/_2sdp">
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/tv_nama_product_in_deposit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_3sdp"
+            android:fontFamily="@font/lato"
+            android:text="Nama Produk                         :"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_13ssp" />
+
+        <TextView
+            android:id="@+id/tvProductName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_2sdp">
+            android:layout_marginStart="@dimen/_3sdp"
+            android:layout_marginTop="@dimen/_3sdp"
+            android:layout_toEndOf="@id/tv_nama_product_in_deposit"
+            android:fontFamily="@font/lato"
+            android:text="Nama Produk Yang Dititipkan"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_13ssp" />
 
-            <TextView
-                android:id="@+id/tv_nama_product_in_deposit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_3sdp"
-                android:fontFamily="@font/lato"
-                android:text="@string/nama_produk_product_in_deposit"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_13ssp" />
+        <TextView
+            android:id="@+id/tv_jumlah_barang_product_in_deposit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_nama_product_in_deposit"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:fontFamily="@font/lato"
+            android:text="Jumlah Produk                      :"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_13ssp" />
 
-            <TextView
-                android:id="@+id/tvProductName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_1sdp"
-                android:layout_toEndOf="@id/tv_nama_product_in_deposit"
-                android:fontFamily="@font/montserrat"
-                android:text="@{depositWithProduct.productData.namaProduct}"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_13ssp" />
+        <TextView
+            android:id="@+id/tv_jumlah_product_in_deposit_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_nama_product_in_deposit"
+            android:layout_marginStart="@dimen/_3sdp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:layout_toEndOf="@id/tv_jumlah_barang_product_in_deposit"
+            android:fontFamily="@font/lato"
+            android:text="Jumlah Produk Yang Dititipkan"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_13ssp" />
 
-            <TextView
-                android:id="@+id/tv_jumlah_barang_product_in_deposit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_nama_product_in_deposit"
-                android:layout_marginTop="@dimen/_4sdp"
-                android:fontFamily="@font/lato"
-                android:text="@string/jumlah_produk_product_in_deposit"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_13ssp" />
+        <TextView
+            android:id="@+id/tv_jumlah_produk_kembali_detail_deposit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_jumlah_product_in_deposit_detail"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:fontFamily="@font/lato"
+            android:text="Jumlah Produk Kembali  :"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_13ssp" />
 
-            <TextView
-                android:id="@+id/tv_jumlah_product_in_deposit_detail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_nama_product_in_deposit"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_toEndOf="@id/tv_jumlah_barang_product_in_deposit"
-                android:fontFamily="@font/montserrat"
-                android:text="@{depositWithProduct.productInDeposit.jumlahQuantity}"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_13ssp" />
+        <TextView
+            android:id="@+id/tv_jumlah_product_kembali_in_deposit_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_jumlah_product_in_deposit_detail"
+            android:layout_marginStart="@dimen/_3sdp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:layout_toEndOf="@id/tv_jumlah_produk_kembali_detail_deposit"
+            android:fontFamily="@font/lato"
+            android:text="Jumlah Produk Kembali"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_13ssp" />
 
-            <EditText
-                android:id="@+id/et_total_terjual"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_jumlah_product_in_deposit_detail"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:background="@android:color/transparent"
-                android:fontFamily="@font/lato"
-                android:gravity="center"
-                android:hint="Jumlah Produk Kembali"
-                android:imeOptions="actionDone"
-                android:inputType="number"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
-                android:textSize="@dimen/_13ssp" />
+        <EditText
+            android:id="@+id/et_return_quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_jumlah_produk_kembali_detail_deposit"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:fontFamily="@font/lato"
+            android:hint="@string/input_jumlah_kembali"
+            android:inputType="number"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:layout_below="@id/et_total_terjual"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:background="@color/white" />
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
 
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
-</layout>
