--- a/app/src/main/res/layout/fragment_detail_deposit.xml
+++ b/app/src/main/res/layout/fragment_detail_deposit.xml
@@ -30,23 +30,19 @@
                 android:text="@{args.currentItem.shopData.ownerName}"
                 android:textSize="@dimen/_16ssp" />
 
-            <View
-                android:id="@+id/divider_top"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:layout_below="@id/tv_informasi_detail_deposit"
-                android:layout_marginTop="@dimen/_4sdp"
-                android:background="@drawable/divider" />
-
             <TextView
                 android:id="@+id/tv_nama_toko_label"
                 style="@style/detail_deposit"
+                android:layout_below="@id/tv_informasi_detail_deposit"
                 android:layout_alignParentStart="true"
+                android:layout_marginTop="@dimen/_6sdp"
                 android:text="@string/nama_toko_deposit_detail" />
 
             <TextView
                 android:id="@+id/tv_nama_toko_deposit_detail"
                 style="@style/detail_deposit"
+                android:layout_below="@id/tv_informasi_detail_deposit"
+                android:layout_marginTop="@dimen/_6sdp"
                 android:layout_toEndOf="@id/tv_nama_toko_label"
                 android:text="@{args.currentItem.shopData.name}" />
 
@@ -63,6 +59,7 @@
                 style="@style/text1_deposit"
                 android:layout_below="@id/tv_nama_toko_label"
                 android:layout_marginTop="@dimen/_6sdp"
+                android:layout_marginEnd="@dimen/_2sdp"
                 android:layout_toEndOf="@id/tv_tanggal_deposit_label"
                 android:text="@{args.currentItem.depositData.depositDate}" />
 
@@ -78,37 +75,45 @@
                 android:id="@+id/tv_finish_deposit_detail"
                 style="@style/text_detail"
                 android:layout_below="@id/tv_tanggal_deposit_label"
-                android:layout_marginTop="@dimen/_6sdp"
+                android:layout_marginTop="@dimen/_7sdp"
+                android:layout_marginEnd="@dimen/_2sdp"
                 android:layout_toEndOf="@id/tv_tanggal_selesai_label"
                 android:text="@{args.currentItem.depositData.depositFinish.isEmpty() ? `Proses` : args.currentItem.depositData.depositFinish}" />
-
 
             <TextView
                 android:id="@+id/tv_detail_produk_in_detail_deposit"
                 style="@style/text2_deposit"
-                android:layout_below="@id/tv_tanggal_selesai_label"
-                android:layout_marginTop="@dimen/_14sdp"
-                android:text="@string/list_produk"/>
+                android:layout_below="@id/tv_finish_deposit_detail"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:text="@string/list_produk" />
+
+            <View
+                android:id="@+id/view_in_deposit_detail"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_1sdp"
+                android:layout_below="@id/tv_detail_produk_in_detail_deposit"
+                android:background="@color/white" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvProductInDepositDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_detail_produk_in_detail_deposit"
+                android:layout_below="@id/view_in_deposit_detail"
                 app:layoutManager="LinearLayoutManager"
                 tools:listitem="@layout/item_product_in_deposit_detail" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_detail_deposit"
+            <Button
+                android:id="@+id/btn_detail_deposit_produk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/rvProductInDepositDetail"
                 android:layout_alignParentEnd="true"
-                android:fontFamily="@font/lato_black"
-                android:textColor="@color/white"
-                android:background="@drawable/button_background"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:text="@string/lanjut" />
+                android:navigateToRincianDeposit="@{true}"
+                android:fontFamily="@font/lato_black"
+                android:backgroundTint="@color/button"
+                android:text="@string/lanjut"
+                android:textColor="@color/white" />
 
 
         </RelativeLayout>
