memperbaiki untuk navigate ke RincianDeposit dan refactor bebarapa code di deposit dan adapternya

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -59,7 +59,15 @@
             app:argType="com.example.konsinyasiapp.entities.DepositWithShop" />
         <action
             android:id="@+id/action_depositDetail_to_rincian_deposit"
-            app:destination="@id/rincian_deposit" />
+            app:destination="@id/rincian_deposit">
+            <argument
+                android:name="idDeposit"
+                app:argType="long" />
+            <argument
+                android:name="currentItem"
+                app:argType="com.example.konsinyasiapp.entities.DepositWithShop" />
+        </action>
+
     </fragment>
 
     <fragment
