fix untuk menerima data di dalam rincianDeposit

--- a/app/src/main/res/layout/item_product_in_deposit.xml
+++ b/app/src/main/res/layout/item_product_in_deposit.xml
@@ -55,7 +55,7 @@
                 android:layout_marginTop="@dimen/_2sdp"
                 android:layout_toEndOf="@id/tv_jumlah_barang_product_in_deposit"
                 android:fontFamily="@font/montserrat"
-                android:text="@{depositWithProduct.productInDeposit.jumlahQuantity}"
+                android:text="@{String.valueOf(depositWithProduct.productInDeposit.jumlahQuantity)}"
                 android:textSize="@dimen/_15ssp" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
