--- a/app/src/main/res/layout/uji_coba.xml
+++ b/app/src/main/res/layout/uji_coba.xml
@@ -58,7 +58,7 @@
                 android:layout_marginTop="@dimen/_2sdp"
                 android:layout_toEndOf="@id/tv_jumlah_barang_product_in_deposit"
                 android:fontFamily="@font/montserrat"
-                android:text="@{depositWithProduct.productInDeposit.jumlahQuantity}"
+                android:text="@{String.valueOf(depositWithProduct.productInDeposit.jumlahQuantity)}"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13ssp" />
 
